--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="Properties/Sec.png">
+              <img src="Properties/sec.png">
               <p></p>
             </div>
             <p class="text-contents">DESIANA</p>
